@@ -8,4 +8,3 @@ copyright_year   = 2010
 
 [Prereqs / RuntimeRecommends]
 JSON::XS = 2.3
-JSON = 2.50
