@@ -1,6 +1,7 @@
 Revision history for WWW-Postmark
 
 {{$NEXT}}
+	- Using JSON instead of JSON::Any
 
 0.4       2012-11-22 22:22:25 Asia/Jerusalem
 	- Removed Try::Tiny dependency. Don't know why it was here in the first place.
